fixed leaflet map interactions

--- a/static/index2.html
+++ b/static/index2.html
@@ -41,7 +41,7 @@
 							<button type="button" class="btn btn-outline-success parkid" id="seki">Sequoia</button>
 							<button type="button" class="btn btn-outline-success parkid" id="jotr">Joshua Tree</button>
 							<button type="button" class="btn btn-outline-success parkid" id="deva">Death Valley</button>
-							<button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button>
+							<!-- <button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button> -->
 						</div>
 
 						<h5>Lesser-Known Attractions</h5>
