--- a/static/index2.html
+++ b/static/index2.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="scripts/pointPoppy.js"></script>
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<link href="styles/styles.css" rel="stylesheet" type="text/css">
+	<link href="styles/styles2.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 </head>
@@ -33,28 +33,29 @@
 					<div id="map" ></div>
 
 					<div class="buttons mt-0">
+						<div class="btnbg">
+							<!-- Location Button bar -->
+							<h5>POPULAR</h5>
+							<div class="btn-toolbar mb-3">
+								<button type="button" class="btn btn-outline-success parkid" id="redw">Redwood</button>
+								<button type="button" class="btn btn-outline-success parkid" id="seki">Sequoia</button>
+								<button type="button" class="btn btn-outline-success parkid" id="jotr">Joshua Tree</button>
+								<button type="button" class="btn btn-outline-success parkid" id="deva">Death Valley</button>
+								<!-- <button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button> -->
+							</div>
 
-						<!-- Location Button bar -->
-						<h5>Most Popular</h5>
-						<div class="btn-toolbar mb-3">
-							<button type="button" class="btn btn-outline-success parkid" id="redw">Redwood</button>
-							<button type="button" class="btn btn-outline-success parkid" id="seki">Sequoia</button>
-							<button type="button" class="btn btn-outline-success parkid" id="jotr">Joshua Tree</button>
-							<button type="button" class="btn btn-outline-success parkid" id="deva">Death Valley</button>
-							<!-- <button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button> -->
-						</div>
-
-						<h5>Lesser-Known Attractions</h5>
-						<div class="btn-toolbar" id="lessknown">
-							<button type="button" class="btn btn-outline-success parkid" id="alca">Alcatraz Island</button>
-							<button type="button" class="btn btn-outline-success parkid" id="cabr">Cabrillo</button>
-							<button type="button" class="btn btn-outline-success parkid" id="camo">Castle Mountains</button>
-							<button type="button" class="btn btn-outline-success parkid" id="chis">Channel Islands</button>
-							<button type="button" class="btn btn-outline-success parkid" id="lavo">Lassen Volcanic</button>
-							<button type="button" class="btn btn-outline-success parkid" id="moja">Mojave National Preserve</button>
-							<button type="button" class="btn btn-outline-success parkid" id="muwo">Muir Woods</button>
-							<button type="button" class="btn btn-outline-success parkid" id="pinn">Pinnacles</button>
-							<button type="button" class="btn btn-outline-success parkid" id="samo">Santa Monica Mountains</button>
+							<h5>LESSER-KNOWN</h5>
+							<div class="btn-toolbar" id="lessknown">
+								<button type="button" class="btn btn-outline-success parkid" id="alca">Alcatraz Island</button>
+								<button type="button" class="btn btn-outline-success parkid" id="cabr">Cabrillo</button>
+								<button type="button" class="btn btn-outline-success parkid" id="camo">Castle Mountains</button>
+								<button type="button" class="btn btn-outline-success parkid" id="chis">Channel Islands</button>
+								<button type="button" class="btn btn-outline-success parkid" id="lavo">Lassen Volcanic</button>
+								<button type="button" class="btn btn-outline-success parkid" id="moja">Mojave National Preserve</button>
+								<button type="button" class="btn btn-outline-success parkid" id="muwo">Muir Woods</button>
+								<button type="button" class="btn btn-outline-success parkid" id="pinn">Pinnacles</button>
+								<button type="button" class="btn btn-outline-success parkid" id="samo">Santa Monica Mountains</button>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -89,7 +90,7 @@
 										</div>
 										<div class="col-sm-7  fixed">
 											<!-- <h5 class="mt-1">Trail Description</h5> -->
-											<p><span id="trail_desc"></span></p> 
+											<p><span id="trail_desc"></span></p>
 											<!-- <p><b>Length: </b><span id="trail_length"></span></p> -->
 											<!-- <p><b>Difficulty: </b><span id="trail_diff"></span></p> -->
 										</div>
