--- a/static/index2.html
+++ b/static/index2.html
@@ -3,28 +3,48 @@
 
 <head>
 	<title>Point Poppy</title>
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+	<script>
+  // Initialize Firebase
+  var config = {
+  	apiKey: "AIzaSyDGF-IGy-niD8I5cfu2tg-dyWbm5Pbg0hY",
+  	authDomain: "cogs121-2aac8.firebaseapp.com",
+  	databaseURL: "https://cogs121-2aac8.firebaseio.com",
+  	projectId: "cogs121-2aac8",
+  	storageBucket: "",
+  	messagingSenderId: "830835610962"
+  };
+  firebase.initializeApp(config);
+</script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script type="text/javascript">
+	var $j = $.noConflict(true);
+</script>
+<script type="text/javascript" src="scripts/pointPoppy.js"></script>
 
-	<script type="text/javascript">
-		var $j = $.noConflict(true);
-	</script>
-
-	<script type="text/javascript" src="scripts/pointPoppy.js"></script>
-
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-	<link href="styles/styles2.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+<link href="styles/styles2.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 </head>
 
 <body>
 	<div class="container-fluid">
 		<div id="page-holder">
-			<a href="/"><img src="images/pointpoppy_tag.png" width="45%" class="mt-3"></a>
-			<!-- <i class="pt-5">Trailblazing California since 2018.</i> -->
-			<!-- <h1 class="display-4">Point Poppy</h1> -->
-			<!-- <h6 class="ml-5 mt-1"><i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Trailblazing California since 2018.</i></h6> -->
-
+			<div>
+				<a href="/"><img src="images/pointpoppy_tag.png" width="45%" class="mt-3"></a>
+				<button type="button" class="btn btn-outline-success ml-5 mt-3" id="suggest">Recommend a Park</button>
+				<div id="visitor_form">
+					<div id="actual_popup">
+					Name: <br><input id="insertNameBox" type="text" size="20"/><br>
+					Brief Description: <br><input id="insertDescBox" type="text" size="30"/><br>
+					Why It Should Be Added: <br><input id="insertReasonBox" type="text" size="30"/><br>
+					<button type="button" class="btn btn-outline-success" id="close_suggestion">Never mind</button>
+					<button type="button" class="btn btn-outline-success" id="send_suggestion">Send!</button>
+				</div>
+				</div>
+			</div>
+			
 
 			<div class="row pt-3">
 				<div class="col-sm-8" id="map-holder">
