--- a/static/index2.html
+++ b/static/index2.html
@@ -44,7 +44,7 @@
 				</div>
 				</div>
 			</div>
-			
+
 
 			<div class="row pt-3">
 				<div class="col-sm-8" id="map-holder">
@@ -55,7 +55,7 @@
 					<div class="buttons mt-0">
 						<div class="btnbg">
 							<!-- Location Button bar -->
-							<h5>POPULAR</h5>
+							<h5><strong>POPULAR</strong></h5>
 							<div class="btn-toolbar mb-3">
 								<button type="button" class="btn btn-outline-success parkid" id="redw">Redwood</button>
 								<button type="button" class="btn btn-outline-success parkid" id="seki">Sequoia</button>
@@ -64,7 +64,7 @@
 								<!-- <button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button> -->
 							</div>
 
-							<h5>LESSER-KNOWN</h5>
+							<h5><strong>LESSER-KNOWN</strong></h5>
 							<div class="btn-toolbar" id="lessknown">
 								<button type="button" class="btn btn-outline-success parkid" id="alca">Alcatraz Island</button>
 								<button type="button" class="btn btn-outline-success parkid" id="cabr">Cabrillo</button>
