--- a/static/index2.html
+++ b/static/index2.html
@@ -31,7 +31,7 @@
 <body>
 	<div class="container-fluid">
 		<div id="page-holder">
-			<div>
+			<div class="title">
 				<a href="/"><img src="images/pointpoppy_tag.png" width="45%" class="mt-3"></a>
 				<button type="button" class="btn btn-outline-success ml-5 mt-3" id="suggest">Recommend a Park</button>
 				<div id="visitor_form">
