add skeleton for visitor info

--- a/static/index2.html
+++ b/static/index2.html
@@ -61,7 +61,7 @@
 								<button type="button" class="btn btn-outline-success parkid" id="seki">Sequoia</button>
 								<button type="button" class="btn btn-outline-success parkid" id="jotr">Joshua Tree</button>
 								<button type="button" class="btn btn-outline-success parkid" id="deva">Death Valley</button>
-								<!-- <button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button> -->
+								<button type="button" class="btn btn-outline-success parkid" id="yose">Yosemite</button>
 							</div>
 
 							<h5><strong>LESSER-KNOWN</strong></h5>
@@ -94,6 +94,7 @@
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Trails')" id="trailButton">Trails</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Gallery')" id="galleryButton">Gallery</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Weather')" id="weatherButton">Weather</button>
+								<!-- <button type="button" class="btn btn-outline-secondary" onclick="getParkData('Hours')" id="hoursButton">Entrance Hours</button> -->
 							</div>
 
 							<div class="col-sm-12">
@@ -140,6 +141,10 @@
 
 								<div id="Weather" class="parkinfo mt-2" style="display:none">
 									<div id="weatherInfo"></div>
+								</div>
+
+								<div id="Hours" class="parkinfo mt-2" style="display:none">
+									<div id="hoursInfo"></div>
 								</div>
 
 							</div>
