--- a/static/index2.html
+++ b/static/index2.html
@@ -104,7 +104,7 @@
 									<div class="row mt-3">
 										<div class="col-sm-5">
 											<div class="form-group mt-1 mb-0">
-												<label for="trailSelect"><h5>Select a trail:</h5></label>
+												<label for="trailSelect"><h5>Select a spot:</h5></label>
 												<select multiple class="form-control" id="trailSelect" onchange="showTrailInfo(value);" size="12">
 												</select>
 											</div>
