Added basic pins for trails on each park, need to add functionality to remove pins

--- a/static/index2.html
+++ b/static/index2.html
@@ -105,7 +105,9 @@
 										<div class="col-sm-5">
 											<div class="form-group mt-1 mb-0">
 												<label for="trailSelect"><h5>Select a trail:</h5></label>
-												<select multiple class="form-control" id="trailSelect" onchange="showTrailInfo(value);" size="12">
+												<select multiple
+                                                class="form-control"
+                                                id="trailSelect" onchange="showTrailAndPin(value);" size="12">
 												</select>
 											</div>
 										</div>
