added paragraph headers explaining what every file does

--- a/static/index2.html
+++ b/static/index2.html
@@ -1,4 +1,12 @@
 <!doctype html>
+
+<!-- 
+    This is the main html page for the application. It contains the site's basic initial layout 
+    and creates the buttons that the user interacts with. It also creates blank areas at 
+    startup to accommodate for park and trail information, which isn't initially visible
+    at page load.
+-->
+
 <html lang="en">
 
 <head>
