minor changes for demo

--- a/static/index2.html
+++ b/static/index2.html
@@ -1,8 +1,8 @@
 <!doctype html>
 
-<!-- 
-    This is the main html page for the application. It contains the site's basic initial layout 
-    and creates the buttons that the user interacts with. It also creates blank areas at 
+<!--
+    This is the main html page for the application. It contains the site's basic initial layout
+    and creates the buttons that the user interacts with. It also creates blank areas at
     startup to accommodate for park and trail information, which isn't initially visible
     at page load.
 -->
@@ -99,7 +99,7 @@
 						<div class="row mt-3">
 							<div class="col-sm-12">
 								<!-- tab buttons -->
-								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Trails')" id="trailButton">Trails</button>
+								<!-- <button type="button" class="btn btn-outline-secondary" onclick="getParkData('Trails')" id="trailButton">Trails</button> -->
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Spots')" id="spotButton">Spots</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Gallery')" id="galleryButton">Gallery</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Weather')" id="weatherButton">Weather</button>
