--- a/static/index2.html
+++ b/static/index2.html
@@ -99,8 +99,7 @@
 						<div class="row mt-3">
 							<div class="col-sm-12">
 								<!-- tab buttons -->
-								<!-- <button type="button" class="btn btn-outline-secondary" onclick="getParkData('Trails')" id="trailButton">Trails</button> -->
-								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Spots')" id="spotButton">Spots</button>
+								 <button type="button" class="btn btn-outline-secondary" onclick="getParkData('Trails')" id="trailButton">Trails</button>								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Spots')" id="spotButton">Spots</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Gallery')" id="galleryButton">Gallery</button>
 								<button type="button" class="btn btn-outline-secondary" onclick="getParkData('Weather')" id="weatherButton">Weather</button>
 								<!-- <button type="button" class="btn btn-outline-secondary" onclick="getParkData('Hours')" id="hoursButton">Entrance Hours</button> -->
